--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <div id="contentMain">
         <header>
             <h1>Vasily Belan</h1>
-            <img id="myPic" src="/images/myPic.jpg" width="200" alt="Vasily Belan's Picture">
+            <img id="myPic" src="/images/myPic.jpg" alt="Vasily Belan's Picture">
         </header>
         <main>
             <h2>WDD 230: Assignment Portal</h2>
-            <hr id="hr">
+            <hr>
             <ul>
                 <li>Lesson 02: <a href="#">Assignment Link</a></li>
                 <li>Lesson 03: <a href="#">Assignment Link</a></li>
@@ -26,16 +26,14 @@
             </ul>
         </main>
         <footer>
-         <span id="copyright">
+            <span id="copyright">
              &copy 
              <span id="year"></span> 
              | Vasily Belan | Republic of Bashkortostan | 
              <a href="https://www.byui.edu/online">BYUI Online Learning</a>
          </span>
-         <br>
          <span id="lastUpdate"></span>
         </footer>
-    </div>
     <script src="js/lastUpdate.js"></script>
 </body>
 </html>
