--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
              &copy 
              <span id="year"></span> 
              | Vasily Belan | Republic of Bashkortostan | 
-             <a href="https://www.byui.edu/online">BYUI Online Learning</a>
+             <a id="refSpan"href="https://www.byui.edu/online">BYUI Online Learning</a>
          </span>
          <span id="lastUpdate"></span>
         </footer>
+    </div>
     <script src="js/lastUpdate.js"></script>
 </body>
 </html>
