--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="contentMain">
         <header>
-            <h1>Vasily </h1>
+            <h1>Vasily Belan</h1>
             <img id="myPic" src="/images/myPic.jpg" alt="Vasily Belan's Picture">
         </header>
         <main>
