--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="contentMain">
         <header>
             <h1>Vasily Belan</h1>
-            <img id="myPic" src="/images/myPic.jpg" alt="Vasily Belan's Picture">
+            <img class="myPic" src="/images/myPic.jpg" alt="Vasily Belan's Picture">
         </header>
         <main>
             <h2>WDD 230: Assignment Portal</h2>
