--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Assignment portal for Vasily Belan | 
     WDD 230: Web Frontend Development | Brigham Young University - Idaho">
     <link  rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/normalize.css">
 </head>
 
 <body>
