--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     WDD 230: Web Frontend Development | Brigham Young University - Idaho">
     <link  rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/medium.css.css">
     <link href="https://fonts.googleapis.com/css?family=Orbitron&display=swap" rel="stylesheet">
     
 </head>
