--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -21,30 +21,40 @@
     </header>
     <main>
         <section>
-            <h2>Text</h2>
-            <h3>Text</h3>
-            <a href="">Text</a>
-            <img src="" alt="">
+            <h2>Alignment</h2>
+            <h3>Why is It Important?</h3>
+            <a href="https://m.computeruniverse.net/">Computeruniverse</a>
+            <img src="/lesson2/images/computeruniverse.jpg" alt="Computeruniverse Picture">
             <p>
-
+                As you can see, the top of the page is well centered. 
+                All parts of the page are equally spaced from each other, and even the name of the store on the left, 
+                seemingly asymmetric, still harmonizes with the search field on the other half.
             </p>
         </section>
         <section>
-            <h2>Text</h2>
-            <h3>Text</h3>
-            <a href="">Text</a>
-            <img src="" alt="">
+            <h2>Repetition</h2>
+            <h3>Is Repetition helpful?</h3>
+            <a href="https://www.zillow.com/mb/?searchQueryState=%7B%22pagination%22%3A%7B%7D%2C%22mapBounds%22%3A%7B%22west%22%3A-
+            121.20125431249998%2C%22east%22%3A-69.78523868749998%2C%22south%22%3A43.41677829765613%2C%22north%22%3A63.
+            799322072140875%7D%2C%22isMapVisible%22%3Atrue%2C%22mapZoom%22%3A5%2C%22regionSelection%22%3A%5B%7B%22regionId%22%3A404366%2C%22regionT
+            ype%22%3A2%7D%5D%2C%22usersSearchTerm%22%3A%22Manitoba%22%2C%22filterState%22%3A%7B%22sort%22%3A%7B%22value%22%3A%22globa
+            lrelevanceex%22%7D%7D%2C%22isListVisible%22%3Atrue%7D">Zillow</a>
+            <img src="/lesson2/images/zillow.jpg" alt="Zillow Picture">
             <p>
-                
+                Repetitions are helpful. Here we see that the font, font size, information, and image location are repeated. 
+                Thanks to this structure, the user can quickly find the necessary information, 
+                which makes the site more attractive and visited.
             </p>
         </section>
         <section>
-            <h2>Text</h2>
-            <h3>Text</h3>
-            <a href="">Text</a>
-            <img src="" alt="">
+            <h2>Contrast</h2>
+            <h3>We must be able to read the text</h3>
+            <a href="https://www.mi.com/global/">Redmi</a>
+            <img src="/lesson2/images/redmi.jpg" alt="Redmi Picture">
             <p>
-                
+                As we can see, all the important information is well readable. 
+                It’s easy for the eye to grab onto the text and quickly read it. 
+                The background and font are selected so that the user may not strain his eyesight.
             </p>
         </section>
     </main>
