--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -34,11 +34,7 @@
         <section>
             <h2>Repetition</h2>
             <h3>Is Repetition helpful?</h3>
-            <a href="https://www.zillow.com/mb/?searchQueryState=%7B%22pagination%22%3A%7B%7D%2C%22mapBounds%22%3A%7B%22west%22%3A-
-            121.20125431249998%2C%22east%22%3A-69.78523868749998%2C%22south%22%3A43.41677829765613%2C%22north%22%3A63.
-            799322072140875%7D%2C%22isMapVisible%22%3Atrue%2C%22mapZoom%22%3A5%2C%22regionSelection%22%3A%5B%7B%22regionId%22%3A404366%2C%22regionT
-            ype%22%3A2%7D%5D%2C%22usersSearchTerm%22%3A%22Manitoba%22%2C%22filterState%22%3A%7B%22sort%22%3A%7B%22value%22%3A%22globa
-            lrelevanceex%22%7D%7D%2C%22isListVisible%22%3Atrue%7D">Zillow</a>
+            <a href="https://www.zillow.com/">Zillow</a>
             <img src="/lesson2/images/zillow.jpg" alt="Zillow Picture">
             <p>
                 Repetitions are helpful. Here we see that the font, font size, information, and image location are repeated. 
