--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -34,7 +34,10 @@
         <section>
             <h2>Repetition</h2>
             <h3>Is Repetition helpful?</h3>
-            <a href="https://www.zillow.com/">Zillow</a>
+            <a href="https://www.zillow.com/mb/?searchQueryState=%7B%22pagination
+            %22%3A%7B%7D%2C%22mapBounds%22%3A%7B%22west%22%3A-121.99226993749998%2C%22east%22%3A-70.57625431249998%2C%22south%22%3A41.24039283987132%2C%22north%22%3A62.
+            46903164143237%7D%2C%22isMapVisible%22%3Atrue%2C%22mapZoom%22%3A5%2C%22regionSelection%22%3A%5B%7B%22regionId%22%3A404366%2C%22regionType%22%3A2%7D%5D%2C%22
+            usersSearchTerm%22%3A%22Manitoba%22%2C%22filterState%22%3A%7B%7D%2C%22isListVisible%22%3Atrue%7D">Zillow</a>
             <img src="/lesson2/images/zillow.jpg" alt="Zillow Picture">
             <p>
                 Repetitions are helpful. Here we see that the font, font size, information, and image location are repeated. 
