--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -45,7 +45,7 @@
         <section>
             <h2>Contrast</h2>
             <h3>We must be able to read the text</h3>
-            <a href="https://www.mi.com/global/">Redmi</a>
+            <a href="https://www.mi.com/global">Redmi</a>
             <img src="/lesson2/images/redmi.jpg" alt="Redmi Picture">
             <p>
                 As we can see, all the important information is well readable. 
