--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/lesson2/css/medium.css">
     <link rel="stylesheet" href="/lesson2/css/large.css">
     <link rel="stylesheet" href="/lesson2/css/normalize.css">
-    <link href="https://fonts.googleapis.com/css?family=Gochi+Hand|Gudea&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Gochi+Hand%7cGudea&display=swap" rel="stylesheet">
     
 </head>
 
