--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="The Weather Site of Vasily Belan">
     <link  rel="stylesheet" href="/lesson3/css/small.css">
     <link rel="stylesheet" href="/lesson3/css/medium.css">
+    <link rel="stylesheet" href="/lesson3/css/large.css">
     <link href="https://fonts.googleapis.com/css?family=Gochi+Hand%7cGudea&display=swap" rel="stylesheet">
 </head>
 
