--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -13,7 +13,7 @@
 <body>
   <header>
 		<a href="preston-4.html">
-    <img src="/lesson4/images/iconfinder_Umbrella_2974391.png" alt="Logo Umbrella"></a>
+    <img src="/lesson4/images/iconfinder_Umbrella_2974391.jpg" alt="Logo Umbrella"></a>
 	  <section>
 		<h1>Weather's Mood</h1>
 		<div>Don't let the weather's mood affect your mood! Look ahead!</div>
