--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -23,8 +23,8 @@
   <nav>
     <ul class="navigation">
       <li><a class="menu" href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
-      <li><a href="preston-4.html">Home</a></li>
-      <li><a id="active" href="#">Preston</a></li>
+      <li><a href="#">Home</a></li>
+      <li><a id="active" href="preston-4.html">Preston</a></li>
       <li><a href="#">Soda Springs</a></li>
       <li><a href="#">Fish Haven</a></li>
       <li><a href="#">Storm Center</a></li>
