--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Assignment portal for Vasily Belan | 
     WDD 230: Web Frontend Development | Brigham Young University - Idaho">
+    <link rel="shortcut icon" href="favicon.ico">
     <link  rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/medium.css">
