--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             <ul>
                 <li>Lesson 02: <a href="https://vasilybelan.github.io/lesson2/design-principles.html">Design Principles</a></li>
                 <li>Lesson 03: <a href="https://vasilybelan.github.io/lesson3/index.html">Site Plan</a></li>
-                <li>Lesson 04: <a href="https://vasilybelan.github.io/lesson4/preston-4.html">Preston Page</a>
+                <li>Lesson 04: <a href="https://vasilybelan.github.io/lesson4/preston-4.html">Preston Page Draft</a>
+                <li>Lesson 04: <a href="https://vasilybelan.github.io/lesson5/preston-5.html">Preston Page</a>   
             </ul>
         </main>
         <footer>
