--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -79,24 +79,35 @@
     </div>
     <section class="article">
       <img class="articlePic" src="images/articlePic.jpg" alt="lightning and city">
-      <h3>Why it is so important to know the weather forecast</h3>
+      <h3>The importance of weather forecast knowledge</h3>
       <div class="articleText">
-        <p>Weather and climate play a vital role in human life. Every day we are faced with the fact that natural disasters occur on the planet and bring more than visible damage. That is why it is so important to warn them. If you constantly monitor the weather forecast, you will be able to adequately respond to disastrous changes. If we talk about a smaller scale of impact, then knowing for sure whether it will rain or snow tomorrow, you can rationally plan your day, or abandon your plan. Only the most accurate data are presented here, the risk of error is minimal, so you can confidently make plans for the near future.</p>    
-        <p>In addition, it is worth noting that the weather forecast has a direct impact on the economic component. Failure to apply meteorological information in energy, construction, aviation, shipping, industry and agriculture can result in significant losses.</p>      
-        <p>Natural phenomena can have varying degrees of impact. On the one hand, hydrometeorological disasters can cause visible damage to the economy, and on the other, become an inexhaustible resource. If you use them effectively, you can maximize profits and minimize losses. The level of interaction of the weather forecast with entities belonging to a particular industry can radically differ. In this case, everything will depend on the degree of its dependence on climate and weather, as well as intra-industry regulations.</p>
+        <p>Weather and climate play a vital role in human life. Every day we are faced with the fact that natural disasters occur on the planet and bring more than visible damage. 
+          That is why it is so important to warn them. If you constantly monitor the weather forecast, you will be able to adequately respond to disastrous changes. 
+          If we talk about a smaller scale of impact, then knowing for sure whether it will rain or snow tomorrow, you can rationally plan your day, or abandon your plan. 
+          Only the most accurate data are presented here, the risk of error is minimal, so you can confidently make plans for the near future.</p>    
+        <p>In addition, it is worth noting that the weather forecast has a direct impact on the economic component. 
+          Failure to apply meteorological information in energy, construction, aviation, shipping, industry and agriculture can result in significant losses.</p>      
+        <p>Natural phenomena can have varying degrees of impact. On the one hand, hydrometeorological disasters can cause visible damage to the economy, and on the other, 
+          become an inexhaustible resource. If you use them effectively, you can maximize profits and minimize losses. 
+          The level of interaction of the weather forecast with entities belonging to a particular industry can radically differ. 
+          In this case, everything will depend on the degree of its dependence on climate and weather, as well as intra-industry regulations.</p>
         <p>Weather can affect the well-being of a person. It is important to predict this and take all necessary security measures.</p>
         <p>In order to avoid harmful consequences, it is necessary to find a reliable source of information that can provide all the information necessary for analytics.</p>
       </div>  
     </section>
-
     <section class="contactsRow">
       <div class="map">
         <img class="mapPic" src="images/map.png" alt="Map's picture">
       </div>
       <div class="contacts">
-        <b>Do you have any questions?</b> Just contact us by email or call, we will be happy to talk with you!<br>
-            <b>Wishes, feedbakcs?</b> Again, just contact us by email or call, we will be happy to talk with you!<br>
-            Our staff are always ready to assist you in choosing the route and answer all your questions!
+        <p>Contact Info</p>
+        <p>asdfsfsdafasdf</p>
+
+        <p>asdfasdfasdfafs</p>
+
+        <p>asdfasdfasdfafs</p>
+
+        <p>contact@Weathersmood.com</p>
           </p>
       </div>
     </section>
