--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="The Weather Site of Vasily Belan">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link  rel="stylesheet" href="/lesson5/css/small.css">
     <link rel="stylesheet" href="/lesson5/css/medium.css">
     <link rel="stylesheet" href="/lesson5/css/large.css">
@@ -39,11 +40,11 @@
     <div class="heroBox">
       <section class="summaryBox">
         <h3>Weather Summary</h3>
-          <p>Current: <span>Info</span></p>
-          <p>High: <span>Info</span></p>
-          <p>Wind Chill: <span>Info</span></p>
-          <p>Humidity: <span>Info</span></p>
-          <p>Wind Speed: <span>Info</span></p>
+          <p>First line: <span>Info</span></p>
+          <p>Second Line: <span>Info</span></p>
+          <p>Third Line: <span>Info</span></p>
+          <p>Fourth line: <span>Info</span></p>
+          <p>Fifth Line: <span>Info</span></p>
       </section>
       <img id="heroPic" src="/lesson5/images/HeroPic.jpg" alt="Some town">
     </div>
@@ -100,15 +101,16 @@
         <img class="mapPic" src="images/map.png" alt="Map's picture">
       </div>
       <div class="contacts">
-        <p>Contact Info</p>
-        <p>asdfsfsdafasdf</p>
-
-        <p>asdfasdfasdfafs</p>
-
-        <p>asdfasdfasdfafs</p>
-
-        <p>contact@Weathersmood.com</p>
-          </p>
+        <h3>Contacts</h3>
+        <p>Emerald City</p>
+        <p>Red Brick Street, 999</p>
+        <p>(999)-999-9999</p>
+        <p>contact@weathersmood.com</p>
+        <div class="socialIcons">
+          <a href="#" class="fa fa-facebook"></a>
+          <a href="#" class="fa fa-twitter"></a>
+          <a href="#" class="fa fa-skype"></a>
+      </div>
       </div>
     </section>
 
