--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Gochi+Hand%7cGudea&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div id="pancakes"><p>Saturday = Preston Pancakes in the Park!  9:00 a.m. Saturday at the City Park Pavilion.</p></div>
   <header>
 		<a href="preston-4.html">
     <img id="logo" src="/lesson4/images/iconfinder_Umbrella_2974391.jpg" alt="Logo Umbrella"></a>
@@ -53,27 +54,27 @@
       <div id="daysSection">
         <section class="dayBox">
           <p id="day0">Mon</p>
-          <p class="iconWeather">&#9728;&#65039;</p>
+          <p class="iconWeather">🌞</p>
           <p>89 &#8457;</p>
         </section>
         <section class="dayBox">
           <p id="day1">Tue</p>
-          <p class="iconWeather">&#9728;&#65039;</p>
+          <p class="iconWeather">🌞</p>
           <p>89 &#8457;</p>
         </section>
         <section class="dayBox">
           <p id="day2">Wed</p>
-          <p class="iconWeather">&#9728;&#65039;</p>
+          <p class="iconWeather">🌞</p>
           <p>89 &#8457;</p>
         </section>
         <section class="dayBox">
           <p id="day3">Thu</p>
-          <p class="iconWeather">&#9728;&#65039;</p>
+          <p class="iconWeather">🌞</p>
           <p>89 &#8457;</p>
         </section>
         <section class="dayBox">
           <p id="day4">Fri</p>
-          <p class="iconWeather">&#9728;&#65039;</p>
+          <p class="iconWeather">🌞</p>
           <p>89 &#8457;</p>
       </section>
       </div>
