--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Gochi+Hand%7cGudea&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div id="pancakes"><p>Saturday = Preston Pancakes in the Park!  9:00 a.m. Saturday at the City Park Pavilion.</p></div>
+  <div id="pancakes"></div>
   <header>
 		<a href="preston-4.html">
     <img id="logo" src="/lesson4/images/iconfinder_Umbrella_2974391.jpg" alt="Logo Umbrella"></a>
