--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -52,31 +52,31 @@
     <h2 class="forecastText"> 5 Days Forecast </h2>
     <div class="forecast">
       <div id="daysSection">
-        <section class="dayBox">
+        <div class="dayBox">
           <p id="day0">Mon</p>
           <p class="iconWeather">🌞</p>
           <p>89 &#8457;</p>
-        </section>
-        <section class="dayBox">
+        </div>
+        <div class="dayBox">
           <p id="day1">Tue</p>
           <p class="iconWeather">🌞</p>
           <p>89 &#8457;</p>
-        </section>
-        <section class="dayBox">
+        </div>
+        <div class="dayBox">
           <p id="day2">Wed</p>
           <p class="iconWeather">🌞</p>
           <p>89 &#8457;</p>
-        </section>
-        <section class="dayBox">
+        </div>
+        <div class="dayBox">
           <p id="day3">Thu</p>
           <p class="iconWeather">🌞</p>
           <p>89 &#8457;</p>
-        </section>
-        <section class="dayBox">
+        </div>
+        <div class="dayBox">
           <p id="day4">Fri</p>
           <p class="iconWeather">🌞</p>
           <p>89 &#8457;</p>
-      </section>
+      </div>
       </div>
     </div>
     <section class="article">
