--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -41,11 +41,11 @@
     <div class="heroBox">
       <section class="summaryBox">
         <h3>Weather Summary</h3>
-          <p>First line: <span>Info</span></p>
-          <p>Second Line: <span>Info</span></p>
-          <p>Third Line: <span>Info</span></p>
-          <p>Fourth line: <span>Info</span></p>
-          <p>Fifth Line: <span>Info</span></p>
+          <p>Currently: <span>Sunny</span></p>
+          <p>High: <span>76 °F</span></p>
+          <p>Wind Chill: <span>10 °F</span></p>
+          <p>Humidity: <span>69%</span></p>
+          <p>Wind Speed: <span>5 mph</span></p>
       </section>
       <img id="heroPic" src="/lesson5/images/HeroPic.jpg" alt="Some town">
     </div>
