--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link  rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/medium.css">
-    <link href="https://fonts.googleapis.com/css?family=Orbitron&display=swap" rel="stylesheet">
+    <!--<link href="https://fonts.googleapis.com/css?family=Orbitron&display=swap" rel="stylesheet">-->
     
 </head>
 
@@ -42,5 +42,10 @@
         </footer>
     </div>
     <script src="js/lastUpdate.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+    <script>
+    WebFont.load({
+        google: {families: ['Orbitron']}});
+    </script>
 </body>
 </html>
