--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -132,7 +132,7 @@
         </div> 
         <span id="lastUpdate"></span>
   </footer>
-  <script src="js/windChill.js"></script>
+  <script src="/lesson6/js/windChill.js"></script>
   <script src="/lesson6/js/lastUpdate.js"></script>
   <script src="/lesson6/js/toggleMenu.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
