--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -4,7 +4,7 @@
     <title>Weather's Mood Site</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="The Weather Site of Vasily Belan">
+    <meta name="description" content="The Gallery Page of Vasily Belan">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link  rel="stylesheet" href="/lesson7/css/small.css">
     <link rel="stylesheet" href="/lesson7/css/medium.css">
