--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                 <li>Lesson 03: <a href="https://vasilybelan.github.io/lesson3/index.html">Site Plan</a></li>
                 <li>Lesson 04: <a href="https://vasilybelan.github.io/lesson4/preston-4.html">Preston Page Draft</a>
                 <li>Lesson 05: <a href="https://vasilybelan.github.io/lesson5/preston-5.html">Preston Page</a>  
-                <li>Lesson 06: <a href="https://vasilybelan.github.io/lesson6/preston-6.html">Preston Page with Wind Chill</a>  
+                <li>Lesson 06: <a href="https://vasilybelan.github.io/lesson6/preston-6.html">Preston Page with Wind Chill</a> 
+                <li>Lesson 07: <a href="https://vasilybelan.github.io/lesson6/lazyload.html">Gallery Page</a>
             </ul>
         </main>
         <footer>
