--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -36,7 +36,7 @@
   <main>
     <section class="gallery">
         <figure>
-            <img class="imgGallery" src="./Images/placeholder.jpg" data-src="/lesson7/images/Clouds.jpg" alt="Nice clouds">
+            <img class="imgGallery" src="./Images/placeholder.jpg" data-src="/lesson7/images/clouds.jpg" alt="Nice clouds">
             <figcaption></figcaption>
         </figure>
         <figure>
