--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -36,39 +36,39 @@
   <main>
     <section class="gallery">
         <figure>
-            <img class="imgGallery" src="./Images/placeholder.jpg" data-src="/lesson7/images/clouds.jpg" alt="Nice clouds">
+            <img class="imgGallery" src="/lesson7/images/placeholder.jpg" data-src="/lesson7/images/clouds.jpg" alt="Nice clouds">
             <figcaption></figcaption>
         </figure>
         <figure>
-            <img class="imgGallery" src="./Images/placeholder.jpg" data-src="/lesson7/images/clouds2.jpg" alt="Dark clouds">
+            <img class="imgGallery" src="/lesson7/images/placeholder.jpg" data-src="/lesson7/images/clouds2.jpg" alt="Dark clouds">
             <figcaption>Test</figcaption>
         </figure>
         <figure>
-            <img class="imgGallery" src="./Images/placeholder.jpg" data-src="/lesson7/images/empty-road.jpg" alt="Empty road in the forest">
+            <img class="imgGallery" src="/lesson7/images/placeholder.jpg" data-src="/lesson7/images/empty-road.jpg" alt="Empty road in the forest">
             <figcaption></figcaption>
         </figure>
         <figure>
-            <img class="imgGallery" src="./Images/placeholder.jpg" data-src="/lesson7/images/fall.jpg" alt="Wonderful fall">
+            <img class="imgGallery" src="./lesson7/images/placeholder.jpg" data-src="/lesson7/images/fall.jpg" alt="Wonderful fall">
             <figcaption></figcaption>
         </figure>
         <figure>
-            <img class="imgGallery" src="./Images/placeholder.jpg" data-src="/lesson7/images/fall-road.jpg" alt="Fall's road in the garden">
+            <img class="imgGallery" src="/lesson7/images/placeholder.jpg" data-src="/lesson7/images/fall-road.jpg" alt="Fall's road in the garden">
             <figcaption></figcaption>
         </figure>
         <figure>
-            <img class="imgGallery" src="./Images/placeholder.jpg" data-src="/lesson7/images/lightning.jpg" alt="lightning above the town">
+            <img class="imgGallery" src="/lesson7/imagesplaceholder.jpg" data-src="/lesson7/images/lightning.jpg" alt="lightning above the town">
             <figcaption></figcaption>
         </figure>
         <figure>
-            <img class="imgGallery" src="./Images/placeholder.jpg" data-src="/lesson7/images/rain.jpg" alt="Raindrops">
+            <img class="imgGallery" src="/lesson7/imagesplaceholder.jpg" data-src="/lesson7/images/rain.jpg" alt="Raindrops">
             <figcaption></figcaption>
         </figure>
         <figure>
-            <img class="imgGallery" src="./Images/placeholder.jpg" data-src="/lesson7/images/snow-road.jpg" alt="Snow road in the forest">
+            <img class="imgGallery" src="/lesson7/imagesplaceholder.jpg" data-src="/lesson7/images/snow-road.jpg" alt="Snow road in the forest">
             <figcaption></figcaption>
         </figure>
         <figure>
-            <img class="imgGallery" src="./Images/placeholder.jpg" data-src="/lesson7/images/winter.jpg" alt="Nive winter">
+            <img class="imgGallery" src="/lesson7/imagesplaceholder.jpg" data-src="/lesson7/images/winter.jpg" alt="Nive winter">
             <figcaption></figcaption>
         </figure>
     </section>
