--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <li>Lesson 04: <a href="https://vasilybelan.github.io/lesson4/preston-4.html">Preston Page Draft</a>
                 <li>Lesson 05: <a href="https://vasilybelan.github.io/lesson5/preston-5.html">Preston Page</a>  
                 <li>Lesson 06: <a href="https://vasilybelan.github.io/lesson6/preston-6.html">Preston Page with Wind Chill</a> 
+                <li>Lesson 07: <a href="https://vasilybelan.github.io/lesson7/lazyload.html">Lazy Load Page</a>
                 <li>Lesson 07: <a href="https://vasilybelan.github.io/lesson7/gallery-7.html">Gallery Page</a>
             </ul>
         </main>
