--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -4,7 +4,7 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width">
    <meta name="description" content="Lazy Loading">
-   <title>Trenton South - WDD 230</title>
+   <title>Belan Vasily WDD 230</title>
 </head>
 <body>
 <h1>Lazy Loading Images</h1>
