--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -14,7 +14,7 @@
 <body>
   <div id="pancakes"></div>
   <header>
-		<a href="lazyload.html">
+		<a href="gallery-7.html">
     <img id="logo" src="/lesson7/images/iconfinder_Umbrella_2974391.jpg" alt="Logo Umbrella"></a>
 	  <section>
 		<h1>Weather's Mood</h1>
