--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -26,7 +26,7 @@
     <ul class="navigation">
       <li><a class="menu" href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
       <li><a href="#">Home</a></li>
-      <li><a id="active" href="preston-6.html">Preston</a></li>
+      <li><a id="#" href="/lesson6/preston-6.html">Preston</a></li>
       <li><a href="#">Soda Springs</a></li>
       <li><a href="#">Fish Haven</a></li>
       <li><a href="#">Storm Center</a></li>
