--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -68,7 +68,7 @@
             <figcaption></figcaption>
         </figure>
         <figure>
-            <img class="imgGallery" src="images/placeholder.jpg" data-src="/lesson7/images/winter.jpg" alt="Nive winter">
+            <img class="imgGallery" src="images/placeholder.jpg" data-src="/lesson7/images/winter.jpg" alt="Nice winter">
             <figcaption></figcaption>
         </figure>
     </section>
