--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -37,39 +37,39 @@
     <section class="gallery">
         <figure>
             <img class="imgGallery" src="images/placeholder.jpg" data-src="/lesson7/images/clouds.jpg" alt="Nice clouds">
-            <figcaption></figcaption>
+            <figcaption>Sometimes you can see cute clouds above the city</figcaption>
         </figure>
         <figure>
             <img class="imgGallery" src="images/placeholder.jpg" data-src="/lesson7/images/clouds2.jpg" alt="Dark clouds">
-            <figcaption>Test</figcaption>
+            <figcaption>Sometimes you can see pretty evil clouds</figcaption>
         </figure>
         <figure>
             <img class="imgGallery" src="images/placeholder.jpg" data-src="/lesson7/images/empty-road.jpg" alt="Empty road in the forest">
-            <figcaption></figcaption>
+            <figcaption>Forest. Fog. Road.</figcaption>
         </figure>
         <figure>
             <img class="imgGallery" src="images/placeholder.jpg" data-src="/lesson7/images/fall.jpg" alt="Wonderful fall">
-            <figcaption></figcaption>
+            <figcaption>Fiery autumn</figcaption>
         </figure>
         <figure>
             <img class="imgGallery" src="images/placeholder.jpg" data-src="/lesson7/images/fall-road.jpg" alt="Fall's road in the garden">
-            <figcaption></figcaption>
+            <figcaption>Autumn is like the beginning of the end of the year</figcaption>
         </figure>
         <figure>
             <img class="imgGallery" src="images/placeholder.jpg" data-src="/lesson7/images/lightning.jpg" alt="lightning above the town">
-            <figcaption></figcaption>
+            <figcaption>They say it is Zeus, but we know that it’s just lightning</figcaption>
         </figure>
         <figure>
             <img class="imgGallery" src="images/placeholder.jpg" data-src="/lesson7/images/rain.jpg" alt="Raindrops">
-            <figcaption></figcaption>
+            <figcaption>There is no bad weather. Even raindrops can deliver aesthetic pleasure.</figcaption>
         </figure>
         <figure>
             <img class="imgGallery" src="images/placeholder.jpg" data-src="/lesson7/images/snow-road.jpg" alt="Snow road in the forest">
-            <figcaption></figcaption>
+            <figcaption>Winter road in the forest</figcaption>
         </figure>
         <figure>
             <img class="imgGallery" src="images/placeholder.jpg" data-src="/lesson7/images/winter.jpg" alt="Nice winter">
-            <figcaption></figcaption>
+            <figcaption>"To every thing there is a season, and a time to every purpose under the heaven..."(Ecclesiastes:3) Winter is time for pondering</figcaption>
         </figure>
     </section>
  </main>
