--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -34,6 +34,7 @@
     </ul>
   </nav>
   <main>
+    <h2 class="headline">Weather Gallery</h2>
     <section class="gallery">
         <figure>
             <img class="imgGallery" src="images/placeholder.jpg" data-src="/lesson7/images/clouds.jpg" alt="Nice clouds">
