--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -4,15 +4,16 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width">
    <meta name="description" content="Lazy Loading">
+   <link rel="stylesheet" href="CSS/lazy.css">
    <title>Belan Vasily WDD 230</title>
 </head>
 <body>
 <h1>Lazy Loading Images</h1>
-<img src="images/placeholder.jpg" data-src="https://placeimg.com/300/400/any" alt="1"><br>
-<img src="images/placeholder.jpg" data-src="https://placeimg.com/300/400/any?t=1591474719120" alt="2"><br>
-<img src="images/placeholder.jpg" data-src="https://placeimg.com/300/400/any?t=1591474729494" alt="3"><br>
-<img src="images/placeholder.jpg" data-src="https://placeimg.com/300/400/any?t=1591474747356" alt="4"><br>
-<img src="images/placeholder.jpg" data-src="https://placeimg.com/300/400/any?t=1591474776974" alt="5"><br>
+<img src="images/placeholder.jpg" data-src="https://placeimg.com/300/400/any" alt="1">
+<img src="images/placeholder.jpg" data-src="https://placeimg.com/300/400/any?t=1591474719120" alt="2">
+<img src="images/placeholder.jpg" data-src="https://placeimg.com/300/400/any?t=1591474729494" alt="3">
+<img src="images/placeholder.jpg" data-src="https://placeimg.com/300/400/any?t=1591474747356" alt="4">
+<img src="images/placeholder.jpg" data-src="https://placeimg.com/300/400/any?t=1591474776974" alt="5">
 <script src="js/lazyloading.js"></script>
 </body>
 </html>
