--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -38,7 +38,7 @@
     <section class="gallery">
         <figure>
             <img class="imgGallery" src="images/placeholder.jpg" data-src="/lesson7/images/clouds.jpg" alt="Nice clouds">
-            <figcaption><h4>Sometimes you can see cute clouds above the city</h4></figcaption>
+            <figcaption><h4 class="error">Sometimes you can see cute clouds above the city</h4></figcaption>
         </figure>
         <figure>
             <img class="imgGallery" src="images/placeholder.jpg" data-src="/lesson7/images/clouds2.jpg" alt="Dark clouds">
