--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -14,6 +14,6 @@
 <img src="images/placeholder.jpg" data-src="https://placeimg.com/300/400/any?t=1591474729494" alt="3">
 <img src="images/placeholder.jpg" data-src="https://placeimg.com/300/400/any?t=1591474747356" alt="4">
 <img src="images/placeholder.jpg" data-src="https://placeimg.com/300/400/any?t=1591474776974" alt="5">
-<script src="js/lazyloading.js"></script>
+<script src="/lesson7/js/lazyloading.js"></script>
 </body>
 </html>
