--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -4,7 +4,7 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width">
    <meta name="description" content="Lazy Loading">
-   <link rel="stylesheet" href="CSS/lazy.css">
+   <link rel="stylesheet" href="/lesson7/css/lazy.css">
    <title>Belan Vasily WDD 230</title>
 </head>
 <body>
