--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <li>Lesson 05: <a href="https://vasilybelan.github.io/lesson5/preston-5.html">Preston Page</a>  
                 <li>Lesson 06: <a href="https://vasilybelan.github.io/lesson6/preston-6.html">Preston Page with Wind Chill</a> 
                 <li>Lesson 07: <a href="https://vasilybelan.github.io/lesson7/lazyload.html">Lazy Load Page</a> | <a href="https://vasilybelan.github.io/lesson7/gallery-7.html">Gallery Page</a>
+                <li>Lesson 07: <a href="https://vasilybelan.github.io/lesson8/tablebuild.html">My table</a> | <a href="https://vasilybelan.github.io/lesson7/gallery-7.html">Gallery Page</a>
             </ul>
         </main>
         <footer>
