--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -29,7 +29,7 @@
       <li><a href="#">Home</a></li>
       <li><a id="active" href="preston-6.html">Preston</a></li>
       <li><a href="#">Soda Springs</a></li>
-      <li><a href="#">Fish Haven</a></li>
+      <li><a href="/lesson8/stormcenter.html">Storm Center</a></li>
       <li><a href="#">Storm Center</a></li>
       <li><a href="#">Gallery</a></li>
     </ul>
