--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -15,7 +15,7 @@
 <body>
   <div id="pancakes"></div>
   <header>
-    <img id="logo" src="/lesson8/images/iconfinder_Umbrella_2974391.jpg" alt="Logo Umbrella"></a>
+    <img id="logo" src="/lesson8/images/iconfinder_Umbrella_2974391.jpg" alt="Logo Umbrella">
 	  <section>
 		<h1>Weather's Mood</h1>
 		<div>Don't let the weather's mood affect your mood! Look ahead!</div>
