--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -47,7 +47,7 @@
         <fieldset>
             <legend>Storm Information</legend>
             <label class="second">Storm Date: <input type="date" name="date" ></label>
-            <label class="second">Storm Type: <input list="stormChoice" type="list" name="stormChoice" ></label>
+            <label class="second">Storm Type: <input list="stormChoice" name="stormChoice" ></label>
             <datalist id="stormChoice">
                 <option value="Flash Flood">
                 <option value="Hail">
