--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -75,8 +75,9 @@
             <label class="radio"><input type="radio" name="level" value="yes"><span class="choice">Yes</span></label>
             <label class="radio"><input type="radio" name="level" value="maybe"><span class="choice">Maybe</span></label>
             <label class="radio"><input type="radio" name="level" value="no"><span class="choice">No</span></label>
-            <label class="top">Comments:</label>
+            <label class="top">Comments:
             <textarea name="comments" id="comments"></textarea>
+            </label> 
         </fieldset>
         <input type="submit" value='Submit' class="submitButton">
     </form>
