--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -75,7 +75,7 @@
             <label class="radio"><input type="radio" name="level" value="yes"><span class="choice">Yes</span></label>
             <label class="radio"><input type="radio" name="level" value="maybe"><span class="choice">Maybe</span></label>
             <label class="radio"><input type="radio" name="level" value="no"><span class="choice">No</span></label>
-            <label class="top">Comments:
+            <label class="top" id="comments">Comments:
             <textarea name="comments" id="comments"></textarea>
             </label> 
         </fieldset>
