--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -27,7 +27,7 @@
     <ul class="navigation">
       <li><a class="menu" href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
       <li><a href="#">Home</a></li>
-      <li><a id="active" href="preston-6.html">Preston</a></li>
+      <li><a id="active" href="/lesson6/preston-6.html">Preston</a></li>
       <li><a href="#">Soda Springs</a></li>
       <li><a href="/lesson8/stormcenter.html">Storm Center</a></li>
       <li><a href="#">Storm Center</a></li>
