--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -6,16 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Storm Center">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link  rel="stylesheet" href="/lesson8/css/small.css">
-    <link rel="stylesheet" href="/lesson8/css/medium.css">
-    <link rel="stylesheet" href="/lesson8/css/large.css">
-    <link rel="stylesheet" href="/lesson8/css/styles.css">
+    <link  rel="stylesheet" href="/lesson9/css/small.css">
+    <link rel="stylesheet" href="/lesson9/css/medium.css">
+    <link rel="stylesheet" href="/lesson9/css/large.css">
+    <link rel="stylesheet" href="/lesson9/css/styles.css">
 
 </head>
 <body>
-  <div id="pancakes"></div>
   <header>
-    <img id="logo" src="/lesson8/images/iconfinder_Umbrella_2974391.jpg" alt="Logo Umbrella">
+    <img id="logo" src="/lesson9/images/iconfinder_Umbrella_2974391.jpg" alt="Logo Umbrella">
 	  <section>
 		<h1>Weather's Mood</h1>
 		<div>Don't let the weather's mood affect your mood! Look ahead!</div>
@@ -25,7 +24,7 @@
   <nav>
     <ul class="navigation">
       <li><a class="menu" href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
-      <li><a id="active" href="#">Home</a></li>
+      <li><a id="active" href="/lesson9/index.html">Home</a></li>
       <li><a href="/lesson6/preston-6.html">Preston</a></li>
       <li><a href="#">Soda Springs</a></li>
       <li><a href="#">Fish Haven</a></li>
@@ -34,7 +33,7 @@
     </ul>
   </nav>
   <main>
-    
+    <div class="cards"></div>
   </main>
   <footer>
         <div>
@@ -48,9 +47,9 @@
         </div> 
         <span id="lastUpdate"></span>
   </footer>
-  <script src="/lesson8/js/lastUpdate.js"></script>
-  <script src="/lesson8/js/toggleMenu.js"></script>
-  <script src="/lesson8/js/stormCenter.js"></script>
+  <script src="/lesson9/js/lastUpdate.js"></script>
+  <script src="/lesson9/js/toggleMenu.js"></script>
+  <script src="/lesson9/js/towns.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script>
     WebFont.load({google: {families: ['Gochi+Hand']}});
