--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <li>Lesson 06: <a href="https://vasilybelan.github.io/lesson6/preston-6.html">Preston Page with Wind Chill</a> 
                 <li>Lesson 07: <a href="https://vasilybelan.github.io/lesson7/lazyload.html">Lazy Load Page</a> | <a href="https://vasilybelan.github.io/lesson7/gallery-7.html">Gallery Page</a>
                 <li>Lesson 08: <a href="https://vasilybelan.github.io/lesson8/tablebuild.html">My Table</a> | <a href="https://vasilybelan.github.io/lesson8/stormcenter.html">Storm Center</a>
+                <li>Lesson 08: <a href="https://vasilybelan.github.io/lesson9/index.html">Home</a> | <a href="https://vasilybelan.github.io/lesson9/prophets.html">Prophets</a>  
             </ul>
         </main>
         <footer>
