--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -35,6 +35,7 @@
   <main>
     <div class="cards"></div>
   </main>
+  <div id="wireframes"><a href="/lesson9/wireframes.html">Wireframes</a></div>
   <footer>
         <div>
             <span id="copyright">
