--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -26,12 +26,12 @@
   <nav>
     <ul class="navigation">
       <li><a class="menu" href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
-      <li><a href="#">Home</a></li>
+      <li><a href="/lesson9/index.html">Home</a></li>
       <li><a id="active" href="preston-5.html">Preston</a></li>
       <li><a href="#">Soda Springs</a></li>
       <li><a href="#">Fish Haven</a></li>
-      <li><a href="#">Storm Center</a></li>
-      <li><a href="#">Gallery</a></li>
+      <li><a href="/lesson8/stormcenter.html">Storm Center</a></li>
+      <li><a href="/lesson7/gallery-7.html">Gallery</a></li>
     </ul>
   </nav>
   <main>
