--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -28,8 +28,9 @@
       <li><a href="/lesson9/index.html">Home</a></li>
       <li><a id="active" href="/lesson6/preston-6.html">Preston</a></li>
       <li><a href="#">Soda Springs</a></li>
+      <li><a href="#">Fish Haven</a></li>
       <li><a href="/lesson8/stormcenter.html">Storm Center</a></li>
-      <li><a href="#">Gallery</a></li>
+      <li><a href="/lesson7/gallery-7.html">Gallery</a></li>
     </ul>
   </nav>
   <main>
