--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="The Gallery Page of Vasily Belan">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link  rel="stylesheet" href="/lesson7/css/small.css">
     <link rel="stylesheet" href="/lesson7/css/medium.css">
     <link rel="stylesheet" href="/lesson7/css/large.css">
@@ -25,12 +24,12 @@
   <nav>
     <ul class="navigation">
       <li><a class="menu" href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
-      <li><a href="#">Home</a></li>
-      <li><a id="#" href="/lesson6/preston-6.html">Preston</a></li>
+      <li><a href="/lesson9/index.html">Home</a></li>
+      <li><a href="/lesson6/preston-6.html">Preston</a></li>
       <li><a href="#">Soda Springs</a></li>
       <li><a href="#">Fish Haven</a></li>
-      <li><a href="#">Storm Center</a></li>
-      <li><a href="#">Gallery</a></li>
+      <li><a href="/lesson8/stormcenter.html">Storm Center</a></li>
+      <li><a id="active" href="#">Gallery</a></li>
     </ul>
   </nav>
   <main>
