--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Storm Center">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link  rel="stylesheet" href="/lesson8/css/small.css">
     <link rel="stylesheet" href="/lesson8/css/medium.css">
     <link rel="stylesheet" href="/lesson8/css/large.css">
@@ -30,7 +29,7 @@
       <li><a href="#">Soda Springs</a></li>
       <li><a href="#">Fish Haven</a></li>
       <li><a id="active" href="/lesson8/stormcenter.html">Storm Center</a></li>
-      <li><a href="#">Gallery</a></li>
+      <li><a href="/lesson7/gallery-7.html">Gallery</a></li>
     </ul>
   </nav>
   <main>
