--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="The Weather Site of Vasily Belan">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
     <link  rel="stylesheet" href="/lesson6/css/small.css">
     <link rel="stylesheet" href="/lesson6/css/medium.css">
     <link rel="stylesheet" href="/lesson6/css/large.css">
@@ -111,10 +112,18 @@
         <p>(999)-999-9999</p>
         <p>contact@weathersmood.com</p>
         <div class="socialIcons">
-          <a href="#" class="fa fa-facebook"></a>
-          <a href="#" class="fa fa-twitter"></a>
-          <a href="#" class="fa fa-skype"></a>
-          
+          <span class="fa-stack fa-2x">
+            <i class="fas fa-square fa-stack-2x"></i>
+            <a href="#"><i class="fab fa-facebook fa-stack-1x fa-inverse"></i></a>
+          </span> 
+          <span class="fa-stack fa-2x">
+            <i class="fas fa-square fa-stack-2x"></i>
+            <a href="#"><i class="fab fa-twitter fa-stack-1x fa-inverse"></i></a>
+          </span>
+          <span class="fa-stack fa-2x">
+            <i class="fas fa-square fa-stack-2x"></i>
+            <a href="#"><i class="fab fa-whatsapp fa-stack-1x fa-inverse"></i></a>
+          </span>
       </div>
       </div>
     </section>
