--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -113,15 +113,15 @@
         <p>contact@weathersmood.com</p>
         <div class="socialIcons">
           <span class="fa-stack fa-2x">
-            <i class="fas fa-square fa-stack-2x"></i>
+            <i class="fas fa-square fa-stack-2x" id="facebook"></i>
             <a href="#"><i class="fab fa-facebook fa-stack-1x fa-inverse"></i></a>
           </span> 
           <span class="fa-stack fa-2x">
-            <i class="fas fa-square fa-stack-2x"></i>
+            <i class="fas fa-square fa-stack-2x" id="twitter"></i>
             <a href="#"><i class="fab fa-twitter fa-stack-1x fa-inverse"></i></a>
           </span>
           <span class="fa-stack fa-2x">
-            <i class="fas fa-square fa-stack-2x"></i>
+            <i class="fas fa-square fa-stack-2x" id="whatsapp"></i>
             <a href="#"><i class="fab fa-whatsapp fa-stack-1x fa-inverse"></i></a>
           </span>
       </div>
