--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <li>Lesson 07: <a href="https://vasilybelan.github.io/lesson7/lazyload.html">Lazy Load Page</a> | <a href="https://vasilybelan.github.io/lesson7/gallery-7.html">Gallery Page</a>
                 <li>Lesson 08: <a href="https://vasilybelan.github.io/lesson8/tablebuild.html">My Table</a> | <a href="https://vasilybelan.github.io/lesson8/stormcenter.html">Storm Center</a>
                 <li>Lesson 09: <a href="https://vasilybelan.github.io/lesson9/index.html">Home</a> | <a href="https://vasilybelan.github.io/lesson9/prophets.html">Prophets</a> 
-                <li>Lesson 10: <a href="https://vasilybelan.github.io/Lesson10/preston-10.html">Preston with API</a>
+                <li>Lesson 10: <a href="https://vasilybelan.github.io/lesson10/preston-10.html">Preston with API</a>
             </ul>
         </main>
         <footer>
