--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -112,7 +112,7 @@
     </section>
     <section class="contactsRow">
       <div class="map">
-        <img class="mapPic" src="images/map.png" alt="Map's picture">
+        <img class="mapPic" src="images/map.jpg" alt="Map's picture">
       </div>
       <div class="contacts">
         <h3>Contacts</h3>
