--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -15,7 +15,11 @@
   <div id="pancakes"></div>
   <header>
 		<a href="preston-10.html">
-    <img id="logo" src="/lesson10/images/iconfinder_Umbrella_2974391.jpg" alt="Logo Umbrella"></a>
+    <img id="logo" src="/lesson10/images/logo.jpg" alt="Logo Umbrella"></a>
+    <!--<picture>
+      <source media="(max-width: 600px)" srcset="/lesson10/images/logo200.jpg">
+      <img src="/lesson10/images/logo.jpg" alt="Logo">-->
+    </picture> 
 	  <section>
 		<h1>Weather's Mood</h1>
 		<div>Don't let the weather's mood affect your mood! Look ahead!</div>
