--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -14,11 +14,11 @@
 <body onload="getFive(5604473)">
   <div id="pancakes"></div>
   <header>
-		<a href="preston-10.html">
-    <img id="logo" src="/lesson10/images/logo.jpg" alt="Logo Umbrella"></a>
-    <!--<picture>
-      <source media="(max-width: 600px)" srcset="/lesson10/images/logo200.jpg">
-      <img src="/lesson10/images/logo.jpg" alt="Logo">-->
+		<!--<a href="preston-10.html">
+    <img id="logo" src="/lesson10/images/logo.jpg" alt="Logo Umbrella"></a>-->
+    <picture>
+      <source media="(max-width: 600px)" srcset="/lesson10/images/logo200.png">
+      <img id="logo" src="/lesson10/images/logo.jpg" alt="Logo">
     </picture> 
 	  <section>
 		<h1>Weather's Mood</h1>
