--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="The Weather Site of Vasily Belan">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
-    <link  rel="stylesheet" href="/lesson11/css/preston/small.css">
-    <link rel="stylesheet" href="/lesson11/css/preston/medium.css">
-    <link rel="stylesheet" href="/lesson11/css/preston/large.css">
-    <link rel="stylesheet" href="/lesson11/css/preston/styles.css">
+    <link  rel="stylesheet" href="/lesson11/css/sodasprings/small.css">
+    <link rel="stylesheet" href="/lesson11/css/sodasprings/medium.css">
+    <link rel="stylesheet" href="/lesson11/css/sodasprings/large.css">
+    <link rel="stylesheet" href="/lesson11/css/sodasprings/styles.css">
 </head>
 <body onload="getFive(5604473)">
   <div id="pancakes"></div>
   <header>
     <picture>
-      <source media="(max-width: 600px)" srcset="/lesson11/images/preston/logo200.png">
+      <source media="(max-width: 600px)" srcset="/lesson11/images/sodasprings/logo200.png">
       <img id="logo" src="/lesson11/images/iconfinder_Umbrella_2974391.jpg" alt="Logo">
     </picture> 
 	  <section>
@@ -28,16 +28,16 @@
     <ul class="navigation">
       <li><a class="menu" href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
       <li><a href="/lesson11/home.html">Home</a></li>
-      <li><a id="active" href="#">Preston</a></li>
-      <li><a href="/lesson11/sodasprings.html">Soda Springs</a></li>
+      <li><a href="/lesson11/preston.html">Preston</a></li>
+      <li><a id="active" href="#">Soda Springs</a></li>
       <li><a href="/lesson11/fishhaven.html">Fish Haven</a></li>
       <li><a href="/lesson11/stormcenter.html">Storm Center</a></li>
       <li><a href="/lesson11/gallery.html">Gallery</a></li>
     </ul>
   </nav>
   <main>
-    <div class="Preston">
-      <h2>Preston Idaho</h2>
+    <div class="sodasprings">
+      <h2>Soda Springs</h2>
     </div>
     <div class="heroBox">
       <div class="summaryBox">
@@ -50,9 +50,9 @@
           <p>Wind Speed: <span id="windS"></span> mph</p>
       </div>
       <picture>
-        <source media="(max-width: 600px)" srcset="/lesson11/images/preston/nicePic400.jpg">
-        <source media="(max-width: 800px)" srcset="/lesson11/images/preston/nicePic800.jpg">
-        <img src="/lesson11/images/preston/nicePic1200.jpg" alt="Nice Picture of nature">
+        <source media="(max-width: 600px)" srcset="/lesson11/images/sodasprings/nicePic400.jpg">
+        <source media="(max-width: 800px)" srcset="/lesson11/images/sodasprings/nicePic800.jpg">
+        <img src="/lesson11/images/sodasprings/nicePic1200.jpg" alt="Nice Picture of nature">
       </picture> 
     </div>
     <h2 class="forecastText"> 5 Days Forecast </h2>
@@ -60,60 +60,59 @@
           <div class="forecast">
               <p id="day1">Mon</p>
               <div class="icon-holder">
-                  <img src="/lesson11/images/preston/Placeholder.png" alt="forecast icon">
+                  <img src="/lesson11/images/sodasprings/Placeholder.png" alt="forecast icon">
               </div>
               <p>&#8457;</p>  
           </div>
           <div class="forecast">
               <p id="day2">Tue</p>
               <div class="icon-holder">
-                  <img src="/lesson11/images/preston/Placeholder.png" alt="forecast icon">
+                  <img src="/lesson11/images/sodasprings/Placeholder.png" alt="forecast icon">
               </div>
               <p>&#8457;</p>  
           </div>
           <div class="forecast">
               <p id="day3">Wed</p>
               <div class="icon-holder">
-                  <img src="/lesson11/images/preston/Placeholder.png" alt="forecast icon">
+                  <img src="/lesson11/images/sodasprings/Placeholder.png" alt="forecast icon">
               </div>
               <p>&#8457;</p>  
           </div>
           <div class="forecast">
               <p id="day4">Thur</p>
               <div class="icon-holder">
-                  <img src="/lesson11/images/preston/Placeholder.png" alt="forecast icon">
+                  <img src="/lesson11/images/sodasprings/Placeholder.png" alt="forecast icon">
               </div>
               <p>&#8457;</p>  
           </div>
           <div class="forecast">
               <p id="day5">Fri</p>
               <div class="icon-holder">
-                  <img src="/lesson11/images/preston/Placeholder.png" alt="forecast icon">
+                  <img src="/lesson11/images/sodasprings/Placeholder.png" alt="forecast icon">
               </div>
               <p>&#8457;</p>  
           </div>
       </div>
     <section class="article">
-      <img class="articlePic" src="/lesson11/images/preston/articlePic.jpg" alt="lightning and city">
-      <h3>The importance of weather forecast knowledge</h3>
+      <img class="articlePic" src="/lesson11/images/sodasprings/articlePic.jpg" alt="lightning and city">
+      <h3>Scientists explained why you want to sleep in the rain</h3>
       <div class="articleText">
-        <p>Weather and climate play a vital role in human life. Every day we are faced with the fact that natural disasters occur on the planet and bring more than visible damage. 
-          That is why it is so important to warn them. If you constantly monitor the weather forecast, you will be able to adequately respond to disastrous changes. 
-          If we talk about a smaller scale of impact, then knowing for sure whether it will rain or snow tomorrow, you can rationally plan your day, or abandon your plan. 
-          Only the most accurate data are presented here, the risk of error is minimal, so you can confidently make plans for the near future.</p>    
-        <p>In addition, it is worth noting that the weather forecast has a direct impact on the economic component. 
-          Failure to apply meteorological information in energy, construction, aviation, shipping, industry and agriculture can result in significant losses.</p>      
-        <p>Natural phenomena can have varying degrees of impact. On the one hand, hydrometeorological disasters can cause visible damage to the economy, and on the other, 
-          become an inexhaustible resource. If you use them effectively, you can maximize profits and minimize losses. 
-          The level of interaction of the weather forecast with entities belonging to a particular industry can radically differ. 
-          In this case, everything will depend on the degree of its dependence on climate and weather, as well as intra-industry regulations.</p>
-        <p>Weather can affect the well-being of a person. It is important to predict this and take all necessary security measures.</p>
-        <p>In order to avoid harmful consequences, it is necessary to find a reliable source of information that can provide all the information necessary for analytics.</p>
+        <p>According to Quartz, chronobiologist Naomi Rogers from Central University of Queens has named several new reasons for reporters who, according to scientists, 
+            make a person sleepy in the rain. Firstly, the sun ceases to shine in the rain, blocking the production of the "night hormone" melatonin in the human body during the day. 
+            That is, the biological clock does not work on time.</p>    
+        <p>Secondly, the smell of earth after rain is a calming effect on a person. As a rule, plants in dry periods emit special oils, presumably blocking seed growth in conditions of lack of water. 
+            Rain washes these oils, mixing them with geosmin, an organic substance produced by bacteria that is responsible for the earthy smell. The result is a new, 
+            distinctive smell with a relaxing effect.</p>      
+        <p>The third reason may be ozone after a thunderstorm - a modification of oxygen, consisting of triatomic molecules. And finally, the rhythmic noise of the rain itself. 
+            According to scientists, the falling of raindrops creates the so-called pink noise. This is one of the background noise, the same as white noise, 
+            sounding in the range from 20 Hz to 20 thousand Hz. According to some reports, pink noise improves a person’s sleep, reducing brain activity. 
+            Scientists can’t confirm their conclusions with laboratory tests, but they suggested that the doubters do a personal experiment and sit for half an hour by the window, 
+            listening to the sound of rain.</p>
       </div>  
     </section>
     <section class="contactsRow">
       <div class="map">
-        <img class="mapPic" src="/lesson11/images/preston/map.jpg" alt="Map's picture">
+        <img class="mapPic" src="/lesson11/images/sodasprings/map.jpg" alt="Map's picture">
       </div>
       <div class="contacts">
         <h3>Contacts</h3>
@@ -151,10 +150,10 @@
         </div> 
         <span id="lastUpdate"></span>
   </footer>
-  <script src="/lesson11/js/preston/lastUpdate.js"></script>
-  <script src="/lesson11/js/preston/toggleMenu.js"></script>
+  <script src="/lesson11/js/sodasprings/lastUpdate.js"></script>
+  <script src="/lesson11/js/sodasprings/toggleMenu.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-  <script src="/lesson11/js/preston/weatherPreston.js"></script>
+  <script src="/lesson11/js/sodasprings/weatherSodasprings.js"></script>
     <script>
     WebFont.load({
         google: {families: ['Gochi+Hand']}});
