--- a/lesson11/home.html
+++ b/lesson11/home.html
@@ -23,7 +23,7 @@
   <nav>
     <ul class="navigation">
       <li><a class="menu" href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
-      <li><a a id="active" href="#">Home</a></li>
+      <li><a id="active" href="#">Home</a></li>
       <li><a href="/lesson11/preston.html">Preston</a></li>
       <li><a href="/lesson11/sodasprings.html">Soda Springs</a></li>
       <li><a href="/lesson11/fishhaven.html">Fish Haven</a></li>
