--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -94,7 +94,7 @@
           </div>
       </div>
     <section class="article">
-      <img class="articlePic" src="/lesson11/images/sodasprings/articlePic.jpg" alt="lightning and city">
+      <img class="articlePic" src="/lesson11/images/sodasprings/articlePic.jpg" alt="rain picture">
       <h3>Scientists explained why you want to sleep in the rain</h3>
       <div class="articleText">
         <p>According to Quartz, chronobiologist Naomi Rogers from Central University of Queens has named several new reasons for reporters who, according to scientists, 
