--- a/lesson11/stormcenter.html
+++ b/lesson11/stormcenter.html
@@ -74,8 +74,8 @@
             <label class="radio"><input type="radio" name="level" value="yes"><span class="choice">Yes</span></label>
             <label class="radio"><input type="radio" name="level" value="maybe"><span class="choice">Maybe</span></label>
             <label class="radio"><input type="radio" name="level" value="no"><span class="choice">No</span></label>
-            <label class="top" id="comments">Comments:
-            <textarea name="comments" id="comments"></textarea>
+            <label class="top" id="comment">Comments:
+            <textarea name="comments" id="comment"></textarea>
             </label> 
         </fieldset>
         <input type="submit" value='Submit' class="submitButton">
