--- a/lesson11/stormcenter.html
+++ b/lesson11/stormcenter.html
@@ -74,7 +74,7 @@
             <label class="radio"><input type="radio" name="level" value="yes"><span class="choice">Yes</span></label>
             <label class="radio"><input type="radio" name="level" value="maybe"><span class="choice">Maybe</span></label>
             <label class="radio"><input type="radio" name="level" value="no"><span class="choice">No</span></label>
-            <label class="top" id="comment">Comments:
+            <label id="comment" class="top" >Comments:
             <textarea name="comments" id="comment"></textarea>
             </label> 
         </fieldset>
